--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Hind:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @import "./markdown.css";
 
 * {
-  font-family: "Hind";
+  font-family: "Inter";
 }
 
 body {
